--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,92 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
-    <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
-    <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
-    <title>SapuCafe - Nosotros</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
+  <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
+  <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
+  <title>SapuCafe - Coofee shop - Nosotros</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/estilo.css">
 </head>
-    <body class="ContenedorAbout">
-        <header class="HAbout">
-            <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
-                <div class="container-fluid">
-                  <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
-                      <li class="nav-item">
-                        <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-info" href="./Productos.html">Productos</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-        </header>
-        <main class="main">
-            <p>
-                Nos desafiamos a cumplir el objetivo de crear a diario rituales, escogiendo diferentes métodos de preparación de café, para que sean nuestros clientes quienes se sorprenden. <br>
-                De esta manera, no sólo cultivarán la curiosidad sino que podrán seleccionar el mejor método para su experiencia.
-                Cuando los clientes vienen, encuentran métodos de preparación que nunca habían visto antes. <br>
-                Desde "Sapu Café" tratamos de cultivar en ellos la curiosidad, y acompañarlos tanto con la experiencia que priorizamos tengan en los locales, como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute.
-            </p>
-        </main>
-        <section class="fotos">
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./Images/Fotos Sitio/cafe.exterior.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./Images/Fotos Sitio/cafe.granos.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./Images/Fotos Sitio/Granos y taza.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./Images/Fotos Sitio/tazas.de.cafe.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <hr>
-        </section>
-    <footer class="Fabout">
-      <nav class="p-1">
-        <ul class="menu2">
-            <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
-            <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
-            <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
-        </ul> 
+<body class="ContenedorAbout">
+  <header class="HAbout">
+    <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
+      <div class="container-fluid">
+        <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggnavigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
+            <li class="nav-item">
+              <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./Productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  </header>
+  <main class="main">
+    <p>
+      Nos desafiamos a cumplir el objetivo de crear a diario rituales, escogiendo diferentes métodos de preparación de café, para que sean nuestros clientes quienes se sorprenden. <br>
+      De esta manera, no sólo cultivarán la curiosidad sino que podrán seleccionar el mejor método para su experiencia.
+      Cuando los clientes vienen, encuentran métodos de preparación que nunca habían visto. <br>
+      Desde "Sapu Café" tratamos de cultivar en ellos la curiosidad, y acompañarlos tanto con la experiencia que priorizamos tengan en los locales, como en sus hogares al utilizar nuestros productdexcelente calidad para su disfrute.
+    </p>
+  </main>
+    <section class="fotos">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Images/Fotos Sitio/cafe.exterior.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./Images/Fotos Sitio/cafe.granos.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./Images/Fotos Sitio/Granos y taza.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./Images/Fotos Sitio/tazas.de.cafe.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <hr>
+    </section>
+  <footer class="Fabout">
+    <nav class="p-1">
+      <ul class="menu2">
+        <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+        <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
+        <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
+        <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+      </ul> 
+    </nav>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
