--- a/index.html
+++ b/index.html
@@ -1,92 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
-    <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
-    <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
-    <title>SapuCafe - Coofee shop - Inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
+  <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
+  <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
+  <title>SapuCafe - Coofee shop - Inicio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body class="contenedorInicio">
-    <header class="headerInicio">
-      <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
-        <div class="container-fluid">
-          <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
-              <li class="nav-item">
-                <a class="nav-link text-info" aria-current="page" href="./index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-info" href="./Productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+  <header class="headerInicio">
+    <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
+      <div class="container-fluid">
+        <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
+            <li class="nav-item">
+              <a class="nav-link text-info" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./Productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <main class="mainInicio">
-        <section>
-            <p class="intro">
-                El olor al café, unos granos recién tostados, esa es la mejor bienvenida que cada día planificamos para brindarles a nuestros clientes cuando abrimos las puertas de nuestras tiendas, y que esperamos puedan disfrutar al degustar nuestros productos. <br> 
-                Pero eso es sólo el comienzo, desde el cultivo responsable hasta el tostado, cada detalle en la elaboración se realiza de forma artesanal. 
-                Además de la esencia de los granos, sabemos que la forma en la que se prepara nuestro café, tiene un efecto sorprendente en el sabor de cada taza.
-            </p>
-        </section>
+      </div>
+    </nav>
+  </header>
+  <main class="mainInicio">
+    <section>
+      <p class="intro">
+        El olor al café, unos granos recién tostados, esa es la mejor bienvenida que cada día planificamos para brindarles a nuestros clientes cuando abrimos las puertas de nuestras tiendas, y esperamos puedan disfrutar al degustar nuestros productos. <br> 
+        Pero eso es sólo el comienzo, desde el cultivo responsable hasta el tostado, cada detalle en la elaboración se realiza de forma artesanal. 
+        Además de la esencia de los granos, sabemos que la forma en la que se prepara nuestro café, tiene un efecto sorprendente en el sabor de cada taza.
+      </p>
+    </section>
     <hr>
     <section>
       <h2 class="tit__pack">
         Productos destacados
       </h2>
       <div class="packs">
-          <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
-          <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
-          <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
-          <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
-          <img class="packs__1" src="./Images/Fotosproductos/Producto 6.png" alt="SapuCafePack">
-          <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
+        <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
+        <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
+        <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
+        <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
+        <img class="packs__1" src="./Images/Fotosproductos/Producto 6.png" alt="SapuCafePack">
+        <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
       </div>
     </section>  
     <hr>
     <section class="videoIntro">
       <div class="videonos">
         <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="500" height="350" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+      </div>
     </section>
-    </main>
-    <footer class="footerInicio">
-      <section class="sucursal">
-        <h4 class="tit__suc">
-          Podes encontrarnos en...
-        </h4>
-        <div class="sucursal__ubi">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-      </section>
-        <hr>
-        <nav class="p-1">
-            <ul class="menu2">
-                <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
-                <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
-                <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
-                <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
-            </ul> 
-        </nav>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  </main>
+  <footer class="footerInicio">
+    <section class="sucursal">
+      <h4 class="tit__suc">
+        Podes encontrarnos en...
+      </h4>
+      <div class="sucursal__ubi">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f1 1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+    <hr>
+    <nav class="p-1">
+      <ul class="menu2">
+        <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+        <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
+        <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
+        <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+      </ul> 
+    </nav>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
