--- a/ContactUs.html
+++ b/ContactUs.html
@@ -1,91 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
-    <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
-    <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
-    <title>SapuCafe - Contacto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
+  <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, coofee shop, desayuno, breakfast">
+  <link rel= "shortcut icon" href="./Images/favicon_io/LogoSapu32.png">
+  <title>SapuCafe - Coofee shop - Contacto</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body class="contenedorcontacto">
-    <header class="Hcontact">
-        <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
-            <div class="container-fluid">
-              <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
-                  <li class="nav-item">
-                    <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-info" href="./Productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="Forcoment">
-        <section>
-            <form action="text">
-                <h2>
-                    Formulario de contacto.
-                </h2>
-                <div class="comments m-5">
-                    <label for="Comentarios"></label><br>
-                    <textarea name="Comentarios" cols="auto" rows="10" placeholder="Deja tus comentarios..."></textarea>
-                </div>
-        </section>
-                <div class="Bootform">
-                    <form>
-                        <div class="m-5">
-                          <label for="name" class="form-label">Nombre y apellido</label>
-                          <input type="name" class="form-control" id="Inputname">
-                        </div>
-                        <div class="m-5">
-                          <label for="email" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="email">
-                        </div><br>
-                        <h4 class="m-3">
-                            Género.
-                        </h4>
-                        <div class="m-5 form-check">
-                          <input type="radio" class="form-check-input" id="Masculino">
-                          <label class="Genero" value="Masculino">Masculino</label>
-                        </div>
-                        <div class="m-5 form-check">
-                          <input type="radio" class="form-check-input" id="Femenino">
-                          <label class="Genero" value="Femenino">Femenino</label>
-                        </div><br>
-                        <button type="submit" class="btn btn-success">Submit</button>
-                      </form>                    
-                </div>
-    </main>
-    <footer class="footcontact">
+  <header class="Hcontact">
+    <nav class="navbar navbar-expand-lg" style="background-color: #07353d;">
+      <div class="container-fluid">
+        <a class="navbar-brand"><img class="Logo" src="./Images/favicon_io/Logo1.png" alt="LogoSapuCafe"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
+            <li class="nav-item">
+              <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./Productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="Forcoment">
+    <section>
+      <form action="text">
+        <h2>
+          Formulario de contacto.
+        </h2>
+        <div class="comments m-5">
+          <label for="Comentarios"></label><br>
+          <textarea name="Comentarios" cols="auto" rows="10" placeholder="Deja tus comentarios..."></textarea>
+        </div>
+    </section>
+    <div class="Bootform">
+      <form>
+        <div class="m-5">
+          <label for="name" class="form-label">Nombre y apellido</label>
+          <input type="name" class="form-control" id="Inputname">
+        </div>
+        <div class="m-5">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email">
+        </div><br>
+        <h4 class="m-3">
+          Género.
+        </h4>
+        <div class="m-5 form-check">
+          <input type="radio" class="form-check-input" id="Masculino">
+          <label class="Genero" value="Masculino">Masculino</label>
+        </div>
+        <div class="m-5 form-check">
+          <input type="radio" class="form-check-input" id="Femenino">
+          <label class="Genero" value="Femenino">Femenino</label>
+        </div><br>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </form>                    
+    </div>
+  </main>
+  <footer class="footcontact">
     <hr>
     <nav class="p-1">
       <ul class="menu2">
-          <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
-          <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
-          <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
-          <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+        <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+        <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
+        <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
+        <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
       </ul> 
-  </nav>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    </nav>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
