--- a/nosotros.html
+++ b/nosotros.html
@@ -25,13 +25,13 @@
               <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./aboutUs.html">Nosotros</a>
+              <a class="nav-link text-info" href="./nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./Productos.html">Productos</a>
+              <a class="nav-link text-info" href="./productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./contactUs.html">Contacto</a>
+              <a class="nav-link text-info" href="./contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
         <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
         <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
-        <li><a href="./ContactUs.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+        <li><a href="./contacto.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
       </ul> 
     </nav>
   </footer>
