--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
             <li class="nav-item">
-              <a class="nav-link active text-info" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link text-info" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-info" href="./nosotros.html">Nosotros</a>
