--- a/contacto.html
+++ b/contacto.html
@@ -22,16 +22,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
             <li class="nav-item">
-              <a class="nav-link text-info" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link text-info" aria-current="page" href="./Index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./nosotros.html">Nosotros</a>
+              <a class="nav-link text-info" href="./Nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./productos.html">Productos</a>
+              <a class="nav-link text-info" href="./Productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./contacto.html">Contacto</a>
+              <a class="nav-link text-info" href="./Contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -78,10 +78,10 @@
     <hr>
     <nav class="p-1">
       <ul class="menu2">
-        <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+        <li><a href="./Index.html"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
         <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
-        <li><a href="./contacto.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+        <li><a href="./Contacto.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
       </ul> 
     </nav>
   </footer>
