--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
               <a class="nav-link text-info" aria-current="page" href="./Index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./Index.html">Nosotros</a>
+              <a class="nav-link text-info" href="./index.html">Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-info" href="./Productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./Contacto.html">Contacto</a>
+              <a class="nav-link text-info" href="./contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -76,10 +76,10 @@
     <hr>
     <nav class="p-1">
       <ul class="menu2">
-        <li><a href="./Index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
+        <li><a href="./index.html" id="arriba"><img class="home" src="./Images/Fotos Sitio/casa.png" alt="Home"></a></li>
         <li><a href="https://www.facebook.com" target="_blank"><img class="facebook" src="./Images/Fotos Sitio/facebook.png" alt="Facebook"> </a></li>
         <li><a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="./Images/Fotos Sitio/instagram.png" alt="instagram"></a></li>
-        <li><a href="./Contacto.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
+        <li><a href="./contacto.html"><img class="contacto" src="./Images/Fotos Sitio/contacto.png" alt="Contacto"></a></li>
       </ul> 
     </nav>
   </footer>
