--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
               <a class="nav-link text-info" href="./nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./nosotros.html">Productos</a>
+              <a class="nav-link text-info" href="./Productos.html">Productos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-info" href="./contacto.html">Contacto</a>
