--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mx-auto mb-1 mb-lg-1 fs-2 p-2 fw-semibold">
             <li class="nav-item">
-              <a class="nav-link text-info" aria-current="page" href="./Index.html">Inicio</a>
+              <a class="nav-link text-info" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-info" href="./index.html">Nosotros</a>
+              <a class="nav-link text-info" href="./nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-info" href="./Productos.html">Productos</a>
