--- a/Productos.html
+++ b/Productos.html
@@ -47,18 +47,22 @@
           <img src="./Images/Fotosproductos/Producto 1.png" alt="pack cafe">
           <div class="card-body">
             <p class="card-text">Cafe Torrado</p>
+            <button id="botonTorrado" class="btn btn-primary">COMPRAR</a>
           </div>
         </div>
         <div class="card" style="width: 15rem;">
           <img src="./Images/Fotosproductos/Producto 2.png" class="card-img-top" alt="Producto cafe">
           <div class="card-body">
             <p class="card-text">Café Molido
+              <br>    
+            <button id="botonMolido" class="btn btn-primary">COMPRAR</a>
           </div>
         </div>
         <div class="card" style="width: 15rem;">
           <img src="./Images/Fotosproductos/Producto 3.png" class="card-img-top" alt="Producto cafe">
           <div class="card-body">
             <p class="card-text">Café Tostado</p>
+            <button id="botonTostado" class="btn btn-primary">COMPRAR</a>
           </div>
         </div>
       </section>
@@ -67,18 +71,21 @@
           <img src="./Images/Fotosproductos/Producto 4.png" alt="pack cafe">
           <div class="card-body">
             <p class="card-text">Pack Café Molido</p>
+            <button id="boton" class="btn btn-primary">COMPRAR</a>
           </div>
         </div>
         <div class="card" style="width: 15rem;">
           <img src="./Images/Fotosproductos/Producto 5.png" class="card-img-top" alt="Producto cafe">
           <div class="card-body">
             <p class="card-text">Sapu Edición Limitada</p>
+            <button id="boton" class="btn btn-primary">COMPRAR</a>
           </div>
         </div>
         <div class="card" style="width: 15rem;">
           <img src="./Images/Fotosproductos/Producto 6.png" class="card-img-top" alt="Producto cafe">
           <div class="card-body">
             <p class="card-text">Pack Promo</p>
+            <button id="boton" class="btn btn-primary">COMPRAR</a>
           </div>
       </section>
   </main>
